--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -166,6 +166,10 @@
                                    class="btn btn-outline-secondary w-100 mt-2">
                                     <i class="bi bi-pencil me-2"></i>Уреди
                                 </a>
+                                 <a href="{% url 'courses:delete' course.slug %}"
+                                   class="btn btn-outline-danger w-100 mt-2">
+                                    <i class="bi bi-trash me-2"></i>Избриши курс
+                                </a>
                             {% else %}
                                 <form method="post" action="{% url 'courses:enroll' course.slug %}">
                                     {% csrf_token %}
