--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -125,7 +125,9 @@
                                         <a href="{% url 'courses:detail' course.slug %}"
                                            class="btn btn-outline-primary btn-sm me-2">Прикажи</a>
                                         <a href="{% url 'courses:edit' course.slug %}"
-                                           class="btn btn-outline-secondary btn-sm">Уреди</a>
+                                           class="btn btn-outline-secondary btn-sm me-2">Уреди</a>
+                                         <a href="{% url 'courses:delete' course.slug %}"
+                                           class="btn btn-outline-danger btn-sm">Избриши курс</a>
                                     </div>
                                 </div>
                             </div>
