Added delete lesson functionality

--- a/templates/courses/manage.html
+++ b/templates/courses/manage.html
@@ -111,6 +111,8 @@
                                                class="btn btn-sm btn-outline-primary">Прикажи</a>
                                             <a href="{% url 'courses:edit_lesson' course.slug lesson.id %}"
                                                class="btn btn-sm btn-outline-warning">Уреди</a>
+                                            <a href="{% url 'courses:delete_lesson' course.slug lesson.id %}"
+                                             class="btn btn-sm btn-outline-danger">Избриши</a>
                                         </td>
                                     </tr>
                                     {% endfor %}
