Added filtering for courses

--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
     </nav>
 
     <!-- Messages -->
-    {% if messages %}
+  <!--  {% if messages %}
         <div class="container mt-3">
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -187,7 +187,7 @@
                 </div>
             {% endfor %}
         </div>
-    {% endif %}
+    {% endif %} -->
 
     <!-- Main Content -->
     <main class="flex-grow-1">
